fix news color, align, heading

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -176,6 +176,9 @@ body {
     height: 96px;
     width: 96px;
   }
+  .media-heading {
+    color: $black3;
+  }
   .btn {
     margin: 25px 7px 0;
     font-weight: $bold;
